minor changes to html

--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,8 @@
 <title>St Francis Parish: St Francis of Assisi</title>
 <link rel="home" href="/" />
 <link rel="shortcut icon" href="/_assets/i/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="/_assets/css/_main.css" />
-<link rel="stylesheet" type="text/css" href="/_assets/css/blue.css" class="switchcss" />
+<link rel="stylesheet" type="text/css" href="../css/_main.css" />
+<link rel="stylesheet" type="text/css" href="../css/blue.css" class="switchcss" />
 </head>
 <body>
 <div role="banner">
@@ -40,8 +40,7 @@
       <h1>Welcome to St Francis Parish</h1>
 	  <div class="box3 highlight equalHeight">
       <h2>Box 1 of 3</h2>
-      <p><img src="_assets/i/church.jpg" alt="St Francis church" width="234" height="152" /></p>
-	  <!--<p><img src="_assets/i/christmas-banner.jpg" alt="Christmas Banner" width="234" height="152" /></p>-->
+      <p><img src="../images/church.jpg" alt="St Francis church" width="234" height="152" /></p>
 	  </div>
       <div class="box3 equalHeight">
 	  <h2>Box 2 of 3</h2>
@@ -84,7 +83,6 @@
     <li><a href="/newsletter/index">Newsletter</a></li>
 	<li><a href="/services">Services</a></li>
 	<li><a href="/activities/index">Activities &amp; groups</a>
-	   
 	</li>
     <li><a href="/liturgy">Liturgy &amp; prayer</a></li>
     <li><a href="/sacraments">Sacraments</a></li>
@@ -92,13 +90,11 @@
     <li><a href="/education">Education</a></li>
     <li><a href="/calendar">Parish calendar</a></li>
     <li><a href="/parishcouncil">Parish council</a>
-	 
     </li>
 	<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
     <li><a href="/premises">Premises &amp; maintenance</a></li>
     <li><a href="/usefullinks">Useful links</a></li>
 	<li><a href="/tour/index">Tour</a>
-	 
     </li>
     <li><a href="/contact">Contact us</a></li>
 </ul>
@@ -119,8 +115,8 @@
 	  <li><a href="#top">Back to top</a></li>
   </ul>  
 </div>
-<script type="text/javascript" src="/_assets/js/jquery.min.js"></script>
-<script type="text/javascript" src="/_assets/js/global.js"></script>
+<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/global.js"></script>
 <!-- / footer -->
 <div id="gutter">
 <!-- for scripts -->
