--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,7 @@
 <title>St Francis Parish: St Francis of Assisi</title>
 <link rel="home" href="/" />
 <link rel="shortcut icon" href="/_assets/i/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="../css/_main.css" />
-<link rel="stylesheet" type="text/css" href="../css/blue.css" class="switchcss" />
+<link rel="stylesheet" type="text/css" href="../css/main.css" />
 </head>
 <body>
 <div role="banner">
@@ -50,9 +49,8 @@
 		  <dt>Monday</dt>
           <dd>10.00</dd>
         </dl>
-		
 		<p>Lorem ipsum <a href="#">link</a> dolor.</p>
-        </div>
+      </div>
       <div class="box3 highlight equalHeight last">
         <h2>Box 3 of 3</h2>
         <p>lorem ipsum dolor</p>
@@ -62,7 +60,7 @@
 	
 	<div class="box2 equalHeight2">
 	<h2>Box one of two</h2>
-	<p>Lorem ipsum</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>	
 	
 	<div class="box2 equalHeight2 last">
@@ -115,7 +113,7 @@
 	  <li><a href="#top">Back to top</a></li>
   </ul>  
 </div>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="../js/global.js"></script>
 <!-- / footer -->
 <div id="gutter">
