--- a/html/two-column-page.html
+++ b/html/two-column-page.html
@@ -10,8 +10,7 @@
 <title>Two column page</title>
 <link rel="home" href="/" />
 <link rel="shortcut icon" href="../i/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="../css/_main.css" />
-<link rel="stylesheet" type="text/css" href="../css/blue.css" class="switchcss" />
+<link rel="stylesheet" type="text/css" href="../css/main.css" />
 </head>
 <body>
 <div role="banner">
@@ -105,7 +104,7 @@
 	  <li><a href="#top">Back to top</a></li>
   </ul>  
 </div>
-<script type="text/javascript" src="../js/jquery.min.js"></script>
+<script type="text/javascript" src="../js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="../js/global.js"></script>
 <!-- / footer -->
 <div id="gutter">
