--- a/html/two-column-page.html
+++ b/html/two-column-page.html
@@ -32,6 +32,33 @@
 
 
 <div id="wrapper" class="wide">
+
+<div id="navigation" role="navigation">
+<ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="three-column-page.html">Three column page</a></li>
+	<li><a href="two-column-page.html" class="active">Two column page</a></li>
+	<li><a href="/activities/index">Activities &amp; groups</a>
+	   
+	</li>
+    <li><a href="/liturgy">Liturgy &amp; prayer</a></li>
+    <li><a href="/sacraments">Sacraments</a></li>
+    <li><a href="/sick">The sick</a></li>
+    <li><a href="/education">Education</a></li>
+    <li><a href="/calendar">Parish calendar</a></li>
+    <li><a href="/parishcouncil">Parish council</a>
+	 
+    </li>
+	<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
+    <li><a href="/premises">Premises &amp; maintenance</a></li>
+    <li><a href="/usefullinks">Useful links</a></li>
+	<li><a href="/tour/index">Tour</a>
+	 
+    </li>
+    <li><a href="/contact">Contact us</a></li>
+</ul>
+</div><!-- / navigation -->
+
 <div id="page"><!-- wrap content and right column -->
   <!--  start content -->
   <div id="content" role="main">  
@@ -63,33 +90,8 @@
   </div>
   </div><!-- /page -->
 
-<div id="navigation" role="navigation">
-<ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/newsletter/index">Newsletter</a></li>
-	<li><a href="/services" class="active">Services</a></li>
-	<li><a href="/activities/index">Activities &amp; groups</a>
-	   
-	</li>
-    <li><a href="/liturgy">Liturgy &amp; prayer</a></li>
-    <li><a href="/sacraments">Sacraments</a></li>
-    <li><a href="/sick">The sick</a></li>
-    <li><a href="/education">Education</a></li>
-    <li><a href="/calendar">Parish calendar</a></li>
-    <li><a href="/parishcouncil">Parish council</a>
-	 
-    </li>
-	<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
-    <li><a href="/premises">Premises &amp; maintenance</a></li>
-    <li><a href="/usefullinks">Useful links</a></li>
-	<li><a href="/tour/index">Tour</a>
-	 
-    </li>
-    <li><a href="/contact">Contact us</a></li>
-</ul>
-</div><!-- / navigation -->
-</div>
-<!-- / wrapper -->
+
+</div><!-- / wrapper -->
 <div id="footer">
 <ul>
 	<li>Updated 10.01.2015</li>
