--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,10 @@
 <link rel="shortcut icon" href="/_assets/i/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="../css/main.css" />
 </head>
-<body>
-<div role="banner">
-	<div class="top" id="top">
+<body class="no-js">
+<header role="banner">
+
+		<div class="top" id="top">
 	  <form action="http://www.google.com/cse" id="cse-search-box" class="searchForm">
 		<div>
 		  <label for="q">Search</label>
@@ -25,15 +26,13 @@
 		</div>
 	  </form>
 	</div>
-	<div id="header">
-	  <p><strong>Catholic Church of St Francis of Assisi</strong></p>
-	</div>
-</div>
+	  <p><strong>St Francis of Assisi Catholic Church</strong></p>
+</header>
 
 
 <div id="wrapper" class="wide">
 
-<div id="navigation" role="navigation">
+<nav id="navigation" role="navigation">
 <ul>
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="three-column-page.html">Three column page</a></li>
@@ -54,18 +53,19 @@
     </li>
     <li><a href="/contact">Contact us</a></li>
 </ul>
-</div><!-- / navigation -->
+</nav><!-- / navigation -->
 
 <div id="page"><!-- wrap content and right column -->
   <!--  start content -->
   <div id="content" role="main"> 
       <!-- content goes here -->
       <h1>Welcome to St Francis Parish</h1>
-	  <div class="box3 highlight equalHeight">
+	  <div class="boxrow">
+	  <div class="box highlight">
       <h2>Box 1 of 3</h2>
-      <p><img src="../images/church.jpg" alt="St Francis church" width="234" height="152" /></p>
+      <p><img src="../img/church.jpg" alt="St Francis church" width="100%" height="100%" /></p>
 	  </div>
-      <div class="box3 equalHeight">
+      <div class="box">
 	  <h2>Box 2 of 3</h2>
         <dl>
           <dt>Sunday</dt>
@@ -75,21 +75,24 @@
         </dl>
 		<p>Lorem ipsum <a href="#">link</a> dolor.</p>
       </div>
-      <div class="box3 highlight equalHeight last">
+      <div class="box highlight last">
         <h2>Box 3 of 3</h2>
         <p>lorem ipsum dolor</p>
         <address class="vcard"><span class="street-address">277 Sandygate Road</span>, Crosspool.</address>
       </div>
+	  </div>
       <!-- /row -->
 	
-	<div class="box2 equalHeight2">
+	<div class="boxrow">
+	<div class="box">
 	<h2>Box one of two</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>	
 	
-	<div class="box2 equalHeight2 last">
+	<div class="box last">
 	<h2>Box two of two</h2>
 	<p>Lorem ipsum</p>
+	</div>
 	</div>
 	
 	</div><!-- /content -->
@@ -101,7 +104,7 @@
 
 
 </div><!-- / wrapper -->
-<div id="footer">
+<footer id="footer">
 <ul>
 	<li>Updated 11.01.2015</li>
 	<li>Church of St Francis of Assisi</li>
@@ -114,7 +117,7 @@
 	  <li><a href="/privacy">Privacy</a></li>
 	  <li><a href="#top">Back to top</a></li>
   </ul>  
-</div>
+</footer>
 <script type="text/javascript" src="../js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="../js/global.js"></script>
 <!-- / footer -->
