--- a/html/three-column-page.html
+++ b/html/three-column-page.html
@@ -14,7 +14,7 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css" />
 </head>
 <body>
-<div role="banner">
+<header role="banner">
 	<div class="top" id="top">
 	  <form action="http://www.google.com/cse" id="cse-search-box" class="searchForm">
 		<div>
@@ -29,12 +29,12 @@
 	<div id="header">
 	  <p><strong>Catholic Church of St Francis of Assisi</strong></p>
 	</div>
-</div>
+</header>
 
 
 <div id="wrapper" class="normal">
 
-<div id="navigation" role="navigation">
+<nav id="navigation" role="navigation">
 <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="three-column-page.html" class="active">Three column page</a></li>
@@ -58,7 +58,7 @@
     </li>
     <li><a href="/contact">Contact us</a></li>
 </ul>
-</div><!-- / navigation -->
+</nav><!-- / navigation -->
 
 <div id="page"><!-- wrap content and right column -->
   <!--  start content -->
@@ -105,7 +105,7 @@
 
 
 </div><!-- / wrapper -->
-<div id="footer">
+<footer id="footer">
 <ul>
 	<li>Updated 18.01.2015</li>
 	<li>Church of St Francis of Assisi</li>
@@ -118,7 +118,7 @@
 	  <li><a href="/privacy">Privacy</a></li>
 	  <li><a href="#top">Back to top</a></li>
   </ul>  
-</div>
+</footer>
 <script type="text/javascript" src="../js/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="../js/global.js"></script>
 <!-- / footer -->
