22 May - refinements to flexbox
Getting flexbox to work in IE11

--- a/html/index.html
+++ b/html/index.html
@@ -60,7 +60,7 @@
   <div id="content" role="main"> 
       <!-- content goes here -->
       <h1>Welcome to St Francis Parish</h1>
-	  <div class="boxrow">
+	  <div class="boxrow3">
 	  <div class="box highlight">
       <h2>Box 1 of 3</h2>
       <p><img src="../img/church.jpg" alt="St Francis church" width="100%" height="100%" /></p>
@@ -72,6 +72,14 @@
           <dd>09.00 and 11.00</dd>
 		  <dt>Monday</dt>
           <dd>10.00</dd>
+		  <dt>Tuesday</dt>
+		  <dd>19.30</dd>
+		  <dt>Wednesday</dt>
+		  <dd>10.00</dd>
+		  <dt>Thursday</dt>
+		  <dd>10.00</dd>
+		  <dt>Friday</dt>
+		  <dd>10.00</dd>
         </dl>
 		<p>Lorem ipsum <a href="#">link</a> dolor.</p>
       </div>
@@ -83,7 +91,7 @@
 	  </div>
       <!-- /row -->
 	
-	<div class="boxrow">
+	<div class="boxrow2">
 	<div class="box">
 	<h2>Box one of two</h2>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
