--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
 
 <nav id="navigation" role="navigation">
 <ul>
+	<li class="mobileOnly">Menu</li>
     <li><a href="index.html" class="active">Home</a></li>
     <li><a href="three-column-page.html">Three column page</a></li>
 	<li><a href="two-column-page.html">Two column page</a></li>
