--- a/html/two-column-page.html
+++ b/html/two-column-page.html
@@ -35,7 +35,8 @@
 
 <nav id="navigation" role="navigation">
 <ul>
-    <li><a href="index.html">Home</a></li>
+    <li class="mobileOnly">Menu</li>
+	<li><a href="index.html">Home</a></li>
     <li><a href="three-column-page.html">Three column page</a></li>
 	<li><a href="two-column-page.html" class="active">Two column page</a></li>
 	<li><a href="/activities/index">Activities &amp; groups</a>
