--- a/html/three-column-page.html
+++ b/html/three-column-page.html
@@ -36,6 +36,7 @@
 
 <nav id="navigation" role="navigation">
 <ul>
+	<li class="mobileOnly">Menu</li>
     <li><a href="index.html">Home</a></li>
     <li><a href="three-column-page.html" class="active">Three column page</a></li>
 	<li><a href="two-column-page.html">Two column page</a></li>
