--- a/html/two-column-page.html
+++ b/html/two-column-page.html
@@ -83,6 +83,12 @@
     
       <h3>Heading three</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	 <ul class="pdf">
+		<li>A list with the class 'pdf'</li>
+	</ul>
+	<ul class="doc">
+		<li>A list with the class 'doc'</li>
+	</ul>
        
   </div><!-- /content -->
   <div id="rightcolumn"> 
@@ -104,7 +110,6 @@
 	  <li><a href="/contact">Contact us</a></li>
 	  <li><a href="/accessibility">Accessibiity</a></li>
 	  <li><a href="/privacy">Privacy</a></li>
-	  <li><a href="#top">Back to top</a></li>
   </ul>  
 </footer>
 <script type="text/javascript" src="../js/jquery-2.1.3.min.js"></script>
