Make navigation more accessible
Moved navigation to foot of page for non-js enabled devices. Menu link
now an actual link, as opposed to a mere click event.

--- a/html/two-column-page.html
+++ b/html/two-column-page.html
@@ -34,30 +34,8 @@
 <div id="wrapper" class="wide">
 
 <nav id="navigation" role="navigation">
-<ul>
-    <li class="mobileOnly">Menu</li>
-	<li><a href="index.html">Home</a></li>
-    <li><a href="three-column-page.html">Three column page</a></li>
-	<li><a href="two-column-page.html" class="active">Two column page</a></li>
-	<li><a href="/activities/index">Activities &amp; groups</a>
-	   
-	</li>
-    <li><a href="/liturgy">Liturgy &amp; prayer</a></li>
-    <li><a href="/sacraments">Sacraments</a></li>
-    <li><a href="/sick">The sick</a></li>
-    <li><a href="/education">Education</a></li>
-    <li><a href="/calendar">Parish calendar</a></li>
-    <li><a href="/parishcouncil">Parish council</a>
-	 
-    </li>
-	<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
-    <li><a href="/premises">Premises &amp; maintenance</a></li>
-    <li><a href="/usefullinks">Useful links</a></li>
-	<li><a href="/tour/index">Tour</a>
-	 
-    </li>
-    <li><a href="/contact">Contact us</a></li>
-</ul>
+<p class="mobileOnly"><a href="#menu">Menu</a></p>
+
 </nav><!-- / navigation -->
 
 <div id="page"><!-- wrap content and right column -->
@@ -99,6 +77,29 @@
 
 
 </div><!-- / wrapper -->
+<ul id="menu">
+	<li><a href="index.html">Home</a></li>
+    <li><a href="three-column-page.html">Three column page</a></li>
+	<li><a href="two-column-page.html" class="active">Two column page</a></li>
+	<li><a href="/activities/index">Activities &amp; groups</a>
+	   
+	</li>
+    <li><a href="/liturgy">Liturgy &amp; prayer</a></li>
+    <li><a href="/sacraments">Sacraments</a></li>
+    <li><a href="/sick">The sick</a></li>
+    <li><a href="/education">Education</a></li>
+    <li><a href="/calendar">Parish calendar</a></li>
+    <li><a href="/parishcouncil">Parish council</a>
+	 
+    </li>
+	<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
+    <li><a href="/premises">Premises &amp; maintenance</a></li>
+    <li><a href="/usefullinks">Useful links</a></li>
+	<li><a href="/tour/index">Tour</a>
+	 
+    </li>
+    <li><a href="/contact">Contact us</a></li>
+</ul>
 <footer id="footer">
 <ul>
 	<li>Updated 10.01.2015</li>
