Aria attributes added to hamburger
Added expanded true and false to hamburger menu

--- a/html/three-column-page.html
+++ b/html/three-column-page.html
@@ -35,7 +35,7 @@
 <div id="wrapper" class="normal">
 
 <nav id="navigation" role="navigation">
-<p class="mobileOnly"><a href="#menu">Menu</a></p>
+<p class="mobileOnly"><a href="#menu" aria-expanded="false" aria-label="navigation menu" aria-controls="navigation" role="button">Menu</a></p>
 
 </nav><!-- / navigation -->
 
