--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
 <div id="wrapper" class="wide">
 
 <nav id="navigation" role="navigation">
-<p class="mobileOnly"><a href="#menu">Menu</a></p>
+<p class="mobileOnly"><a href="#menu" aria-expanded="false" aria-label="navigation menu" aria-controls="navigation" role="button">Menu</a></p>
 
 </nav><!-- / navigation -->
 
