Added real content
Added real content, now has 4 pages. Changed Hamburger, now supports
nested <ul>s.
Made live on test site for testing

--- a/html/index.html
+++ b/html/index.html
@@ -32,10 +32,10 @@
 
 <div id="wrapper" class="wide">
 
-<nav id="navigation" role="navigation">
+
 <p class="mobileOnly"><a href="#menu" aria-expanded="false" aria-label="navigation menu" aria-controls="navigation" role="button">Menu</a></p>
 
-</nav><!-- / navigation -->
+<!-- / navigation -->
 
 <div id="page"><!-- wrap content and right column -->
   <!--  start content -->
@@ -44,30 +44,33 @@
       <h1>Welcome to St Francis Parish</h1>
 	  <div class="boxrow3">
 	  <div class="box highlight">
-      <h2>Box 1 of 3</h2>
+      <h2>St Francis Church</h2>
       <p><img src="../img/church.jpg" alt="St Francis church" width="100%" height="100%" /></p>
 	  </div>
-      <div class="box">
-	  <h2>Box 2 of 3</h2>
+      <div class="box highlight">
+	    <h2>Services</h2>
         <dl>
           <dt>Sunday</dt>
           <dd>09.00 and 11.00</dd>
 		  <dt>Monday</dt>
           <dd>10.00</dd>
-		  <dt>Tuesday</dt>
-		  <dd>19.30</dd>
-		  <dt>Wednesday</dt>
-		  <dd>10.00</dd>
-		  <dt>Thursday</dt>
-		  <dd>10.00</dd>
-		  <dt>Friday</dt>
-		  <dd>10.00</dd>
+          <dt>Tuesday</dt>
+          <dd>19.30</dd>
+          <dt>Wednesday</dt>
+          <dd>10.00</dd>
+          <dt>Thursday</dt>
+          <dd>10.00</dd>
+          <dt>Friday</dt>
+          <dd>10.00</dd>
+          <dt>Saturday</dt>
+          <dd>12.00</dd>
         </dl>
-		<p>Lorem ipsum <a href="#">link</a> dolor.</p>
+		
+		<p>Please check latest <a href="newsletter/">newsletter</a> for exact times.</p>
       </div>
       <div class="box highlight last">
-        <h2>Box 3 of 3</h2>
-        <p>lorem ipsum dolor</p>
+        <h2>Where are we?</h2>
+        <p><img src="../img/map.gif" alt="Map showing location of St Francis Crosspool" width="100%" height="100%" /></p>
         <address class="vcard"><span class="street-address">277 Sandygate Road</span>, Crosspool.</address>
       </div>
 	  </div>
@@ -75,13 +78,19 @@
 	
 	<div class="boxrow2">
 	<div class="box">
-	<h2>Box one of two</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<h2>Parish Panto</h2>
+	<p>The parish pantomime, Pinocchio and Juliet, will be at 7:30pm on Friday 27<sup>th</sup> and Saturday
+	   28<sup>th</sup> November in the Assisi Hall.</p>
+	<p>Tickets (Adults &pound;5 and children &pound;3) available from Tammy. All proceeds to CAFOD.</p>
 	</div>	
 	
 	<div class="box last">
-	<h2>Box two of two</h2>
-	<p>Lorem ipsum</p>
+	<h2>About St. Francis</h2>
+	<p>The Parish of St. Francis of Assisi is a lively and active parish, serving the areas of Crosspool, Sandygate,
+	   Lodge Moor, Ranmoor, Nether Green and Fulwood.</p>
+	<p>It is part of Sheffield North Deanery in the Diocese of Hallam.</p>
+	<p>The Parish Priest is Father Kevin Thornton and the Parish Deacon is Stephen Parker.</p>
+	<!--p>We have an active Parish Council and the current chair is Stephen Spooner.</p-->
 	</div>
 	</div>
 	
@@ -94,26 +103,28 @@
 
 
 </div><!-- / wrapper -->
-<ul id="menu">
-    <li><a href="index.html" class="active">Home</a></li>
-    <li><a href="three-column-page.html">Three column page</a></li>
-	<li><a href="two-column-page.html">Two column page</a></li>
-	<li><a href="/activities/index">Activities &amp; groups</a>
-	</li>
-    <li><a href="/liturgy">Liturgy &amp; prayer</a></li>
-    <li><a href="/sacraments">Sacraments</a></li>
-    <li><a href="/sick">The sick</a></li>
-    <li><a href="/education">Education</a></li>
-    <li><a href="/calendar">Parish calendar</a></li>
-    <li><a href="/parishcouncil">Parish council</a>
-    </li>
-	<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
-    <li><a href="/premises">Premises &amp; maintenance</a></li>
-    <li><a href="/usefullinks">Useful links</a></li>
-	<li><a href="/tour/index">Tour</a>
-    </li>
-    <li><a href="/contact">Contact us</a></li>
-</ul>
+<nav id="menu" role="navigation">
+	<ul>
+		<li><a href="index.html" class="active">Home</a></li>
+		<li><a href="newsletter.html">Newsletter</a></li>
+		<li><a href="services.html">Services</a></li>
+		<li><a href="activities/index.html">Activities &amp; groups</a>
+		</li>
+		<li><a href="/liturgy">Liturgy &amp; prayer</a></li>
+		<li><a href="/sacraments">Sacraments</a></li>
+		<li><a href="/sick">The sick</a></li>
+		<li><a href="/education">Education</a></li>
+		<li><a href="/calendar">Parish calendar</a></li>
+		<li><a href="/parishcouncil">Parish council</a>
+		</li>
+		<li><a href="/diocese-parish">Diocese &amp; the parish</a></li>
+		<li><a href="/premises">Premises &amp; maintenance</a></li>
+		<li><a href="/usefullinks">Useful links</a></li>
+		<li><a href="/tour/index">Tour</a>
+		</li>
+		<li><a href="/contact">Contact us</a></li>
+	</ul>
+</nav>
 <footer id="footer">
 <ul>
 	<li>Updated 11.01.2015</li>
