pre launch minor tweaks
added padding #page
remove id=menu after moved it to get smoother hide/show
improved no-js view

--- a/html/services.html
+++ b/html/services.html
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="../i/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="../css/main.css" />
 </head>
-<body>
+<body class="no-js">
 <header role="banner">
 	<div class="top" id="top">
 	  <form action="http://www.google.com/cse" id="cse-search-box" class="searchForm">
